# bls-runtime

./: .rustfmt.toml  Cargo.toml  README.md  install.sh
.github/workflows/: build.yml  runtime_release_linux.yml  runtime_release_mac.yml  runtime_release_win.yml  rust-clippy.yml  rust-fmt.yml  rust-grcov.yml
blockless/: Cargo.toml
blockless/src/: context.rs  lib.rs  modules.rs
blockless/tests/: blockless_tests.rs  common.rs  modules_tests.rs  multi_threads.rs
bls-runtime/: Cargo.toml
bls-runtime/src/: cli_clap.rs  config.rs  error.rs  main.rs  v86config.rs
crates/blockless-drivers/: Cargo.toml
crates/blockless-drivers/macro/: Cargo.toml
crates/blockless-drivers/macro/src/: config.rs  lib.rs
crates/blockless-drivers/src/: error.rs  lib.rs
crates/blockless-drivers/src/cdylib_driver/: driver_wasi_file.rs  mod.rs
crates/blockless-drivers/src/cgi_driver/: db.rs  mod.rs  process.rs
crates/blockless-drivers/src/http_driver/: mod.rs  reqwest_driver.rs
crates/blockless-drivers/src/ipfs_driver/: api.rs  file.rs  http_raw.rs  mod.rs
crates/blockless-drivers/src/llm_driver/: handle.rs  llamafile.rs  mcp.rs  mod.rs  models.rs  provider.rs
crates/blockless-drivers/src/memory_driver/: mod.rs
crates/blockless-drivers/src/s3_driver/: bucket.rs  mod.rs
crates/blockless-drivers/src/tcp_driver/: mod.rs
crates/blockless-drivers/src/wasi/: cgi.rs  http.rs  ipfs.rs  llm.rs  memory.rs  mod.rs  s3.rs  socket.rs
crates/blockless-drivers/witx/: blockless_http.witx  blockless_llm.witx
crates/blockless-env/: Cargo.toml
crates/blockless-env/src/: lib.rs
crates/blockless-multiaddr/: Cargo.toml
crates/blockless-multiaddr/src/: lib.rs  parse.rs
crates/wasi-common/: Cargo.toml
crates/wasi-common/src/: ctx.rs  file.rs  pipe.rs
crates/wasi-common/src/blockless/: colors.rs  config.rs  error.rs  mod.rs  permission_parser.rs  permissions.rs  prompter.rs
crates/wasi-common/src/snapshots/: preview_1.rs
crates/wasi-common/src/sync/: mod.rs
crates/wasi-common/src/tokio/: mod.rs
docs/: user.md
docs/modules/: llm.md
