[package]
name = "bls-runtime"
version = "0.6.4"
authors = ["Join.G"]
description = "command line example"
keywords = ["webassembly", "wasm"]
readme = "README.md"
edition = "2024"

[dependencies]
blockless = { path = "../blockless" }
anyhow = { workspace = true }
json = { workspace = true }
tokio = {workspace = true, features = ["net", "time", "macros", "rt-multi-thread"]}
log = { workspace = true }
rust-car = { workspace = true }
md5 = { workspace = true }
url = { workspace = true }
clap = { workspace = true, features = ["color", "suggestions", "derive"] }
dlopen = { workspace = true }
once_cell.workspace = true
dotenvy = "0.15.7"
env_logger = { workspace = true }
anstyle = "1.0.10"

[dev-dependencies]
tempfile = { workspace = true }
