[package]
name = "blockless-drivers"
version = "0.1.0"
authors = ["Join.G"]
description = "blockless drivers"
keywords = ["blockless", "driver"]
readme = "README.md"
edition = "2024"

[features]
default = ["builtin_http"]
builtin_http = []
wiggle_metadata = ["wiggle/wiggle_metadata"]
runtime = []

[dependencies]
blockless-drivers-macro = {path = "macro"}
blockless-multiaddr = {path = "../blockless-multiaddr"}
wasmtime-wasi = { workspace = true }
wiggle = { workspace = true }
wasi-common = { workspace = true }
anyhow = { workspace = true }
cap-std = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
dlopen = { workspace = true }
json = { workspace = true }
lazy_static = { workspace = true}
reqwest = { version = "0.11", features = ["stream", "rustls-tls", "json"], default-features = false }
serde_urlencoded = "0.7"
bytes = { workspace = true }
httparse = "1"
url = { workspace = true }
rust-s3 = { git = "https://github.com/Joinhack/rust-s3", features = ["tokio-rustls-tls"] }
futures-core = { workspace = true }
futures-util = { workspace = true }
md5 = "0.7.0"
rusqlite = { version = "0.28", features = ["bundled"] }
serde_json = "1.0.138"
serde = "1.0.217"
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "5d92061", features = [
  "client",
  "transport-sse",
] }
chrono = "0.4"

[dev-dependencies]
tempdir = { workspace = true }
tokio-test = "0.4.2"
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
