[package]
name = "blockless-env"
version = "0.1.0"
authors = ["Join.G"]
description = "blockless drivers"
keywords = ["blockless", "driver"]
readme = "README.md"
edition = "2024"

[dependencies]
wasi-common = {workspace = true}
blockless-drivers = {workspace = true}

[dependencies.blockless-drivers-macro]
path = "../blockless-drivers/macro"

[dependencies.wasmtime]
workspace = true

[dependencies.wiggle]
workspace = true